opam-version: "1.2"
authors: ["Brendan Long <self@brendanlong.com>"]
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/ocaml-tds"
dev-repo: "https://github.com/brendanlong/ocaml-tds.git"
bug-reports: "https://github.com/brendanlong-ocaml-tds/issues"
doc: "https://brendanlong.github.io/ocaml-tds/doc"

build: ["dune" "build" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "integers"
  "ppx_jane"
  "sexplib" {>= "v0.10"}
  "uutf"

  "bisect_ppx" {build & >= "1.3.1"}
  "dune" {build}

  "ounit" {test}
]

available: [ocaml-version >= "4.06.1"]
